--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
@@ -44,6 +44,9 @@ buffConflicts:
     瘟疫狂暴: 0
     瘟疫狂暴冷却: 1
   13:
+    龙蒿披风: 0
+    龙蒿披风冷却: 1
+  100:
     狮心圣裁能量外壳: 0
     狮心圣裁能量外壳冷却: 1
 
@@ -299,15 +302,14 @@ effects:
     isBuff: true
     attributes:
       mobLimit: 10
-      mobSpawnRate: 0.1
-      mobSpawnRateMulti: 1.5
-    tooltip: 刷怪率和上限增加
+      mobSpawnRate: 0.5
+    tooltip: 刷怪效率和上限增加
   虫潮:
     isBuff: true
     attributes:
       mobLimit: 5
-      mobSpawnRate: 1
-    tooltip: 刷怪率和上限增加
+      mobSpawnRate: 5
+    tooltip: 刷怪倍率和上限增加
   冷静:
     isBuff: true
     attributes:
@@ -541,6 +543,21 @@ effects:
   瘟疫狂暴冷却:
     isBuff: false
     tooltip: 你需要稍等片刻才能再次使用瘟疫狂暴
+  生命涌流:
+    isBuff: true
+    attributes:
+        critRanged: 6
+    tooltip: 极速生命恢复
+  龙蒿披风:
+    isBuff: true
+    attributes:
+        damageTakenMulti: -0.5
+    buffOnTimeout: 龙蒿披风冷却
+    buffOnTimeoutDuration: 600
+    tooltip: 降低接触伤害
+  龙蒿披风冷却:
+    isBuff: false
+    tooltip: 你需要稍等片刻才能再次使用龙蒿披风
   暴君之怒:
     isBuff: true
     attributes:
