armor set, tweaks and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -401,6 +401,46 @@ pieces:
   - 龙蒿远程套装
   - 龙蒿魔法套装
   - 龙蒿召唤套装
+  光棱头盔:
+  - 光棱套装
+  光棱斗篷:
+  - 光棱套装
+  光棱护胫:
+  - 光棱套装
+  血碾溃阵盔:
+  - 血炎近战套装
+  血弑曲角盔:
+  - 血炎远程套装
+  血魇九头盔:
+  - 血炎魔法套装
+  血戮狂龙盔:
+  - 血炎召唤套装
+  血炎铠甲:
+  - 血炎近战套装
+  - 血炎远程套装
+  - 血炎魔法套装
+  - 血炎召唤套装
+  血炎护胫:
+  - 血炎近战套装
+  - 血炎远程套装
+  - 血炎魔法套装
+  - 血炎召唤套装
+  蓝色欧米茄头盔:
+  - 蓝色欧米茄套装
+  蓝色欧米茄胸甲:
+  - 蓝色欧米茄套装
+  蓝色欧米茄触手:
+  - 蓝色欧米茄套装
+  弑神者头盔:
+  - 弑神者近战套装
+  弑神者头套:
+  - 弑神者远程套装
+  弑神者胸甲:
+  - 弑神者近战套装
+  - 弑神者远程套装
+  弑神者腿甲:
+  - 弑神者近战套装
+  - 弑神者远程套装
 sets:
   木套装:
     lore:
@@ -964,7 +1004,7 @@ sets:
     - ''
     - §a套装效果：
     - §a所受伤害减少10%
-    - §a受到近战攻击后反弹伤害
+    - §a受到近战攻击后反弹1.5倍伤害
     - §a近战攻击命中敌人后，若其破晓层数小于2则追加一层破晓效果
     attributes:
       damageTakenMulti: -0.1
@@ -995,9 +1035,9 @@ sets:
     - §a套装效果：
     - §a近战攻速提升15%
     - §a增加刷怪量和刷怪率
-    - §a受到伤害时有25%的几率获得4秒的生命涌流增益，增加6点生命恢复。
-    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，获得龙蒿披风增益10秒。
-    - §a这个效果结束之后有30秒的冷却时间。
+    - §a受到伤害时有25%的几率获得4秒的生命涌流增益，增加6点生命恢复
+    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，获得龙蒿披风增益10秒
+    - §a这个效果结束之后有30秒的冷却时间
     attributes:
       useSpeedMeleeMulti: 0.15
       mobLimit: 2
@@ -1007,8 +1047,8 @@ sets:
     - ''
     - §a套装效果：
     - §a减少刷怪量和刷怪率
-    - §a远程弹幕在击中敌人后分裂为2个追踪生命能量，分别造成45%的魔法伤害。
-    - §a这个效果有1秒的冷却。
+    - §a远程弹幕在击中敌人后分裂为2个追踪生命能量，分别造成45%的魔法伤害
+    - §a这个效果有1秒的冷却
     attributes:
       mobLimit: -2
       mobSpawnRateMulti: -0.5
@@ -1032,3 +1072,91 @@ sets:
       minionLimit: 4
       mobLimit: -2
       mobSpawnRateMulti: -0.5
+  光棱套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a最大魔力值增加40，魔力消耗减少15%
+    - §a魔法伤害提升10%
+    - §a提高魔力再生速度
+    attributes:
+      maxMana: 40
+      manaUseMulti: -0.15
+      damageMagicMulti: 0.1
+      manaRegen: 10
+  血炎近战套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a提高18%近战攻速，增加刷怪量和刷怪率
+    - §a使用真近战武器打击敌人时进入鲜血狂怒状态，持续5秒
+    - §a此期间近战伤害和暴击率提升20%，来自敌人的接触伤害减半
+    - §a此效果有20秒冷却时间
+    attributes:
+      regen: 6
+      useSpeedMeleeMulti: 0.18
+      mobLimit: 2
+      mobSpawnRateMulti: 0.3
+  血炎远程套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a按下按下套装增益键[默认为V]释放噬魂幽花的冤魂摧毁你的敌人
+    - §a此效果有30秒冷却时间
+    attributes:
+      regen: 6
+  血炎魔法套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a魔法武器每1.25秒会发射一个灵魂射弹
+    attributes:
+      regen: 6
+  血炎召唤套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a增加50%召唤伤害和4召唤栏
+    - §a如果玩家在90%血量以上，增加15%召唤伤害
+    - §a在50%生命及以下获得40点防御和4点生命恢复
+    attributes:
+      regen: 6
+      damageSummonMulti: 0.5
+      minionLimit: 4
+  蓝色欧米茄套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a获得30点护甲穿透和0.2%的生命汲取
+    - §a提高10%伤害和暴击率并+2召唤栏
+    - §a按下套装增益键[默认为V]进入深渊狂乱状态5秒
+    - §a深渊狂乱进一步提升你的伤害与暴击率，同时额外获得0.4%的生命汲取
+    - §a此效果有25秒冷却时间
+    attributes:
+      armorPenetration: 30
+      lifeSteal: 0.002
+      damageMulti: 0.1
+      crit: 10
+      minionLimit: 2
+  弑神者近战套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a敌人在对你造成接触伤害后会受到2.5倍伤害
+  弑神者远程套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a你的远程武器射击时每2.5秒发射一枚弑神榴霰弹
