--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -216,6 +216,10 @@ spawnInfo:
         地狱犬: 1
     南瓜月18:
         胡闹鬼: 1
+    南瓜月19:
+        胡闹鬼: 1
+    南瓜月20:
+        胡闹鬼: 1
     冰霜月1:
         僵尸精灵: 5
         姜饼人: 3
@@ -285,8 +289,15 @@ spawnInfo:
         雪兽: 4
         胡桃夹士: 6
         坎卜斯: 8
+        雪花怪: 1
+        精灵直升机: 1
     冰霜月19:
+        雪兽: 4
+        雪花怪: 1
+        精灵直升机: 1
+    冰霜月20:
         雪兽: 1
+        精灵直升机: 1
 mobTier:
     哥布林苦力: 克苏鲁之眼
     哥布林盗贼: 克苏鲁之眼
